# cement-boilerplate

./: README.md  docker-compose.yml  pyproject.toml
backend/: create_table.py
backend/application/: Dockerfile  main.py
backend/core/domain/: factory_data.py  predict_data.py
backend/core/type/: cache.py  db_resource.py  message.py
backend/infrastructure/cache/: cache_info.py  cache_store.py  redis.py  setting.py
backend/infrastructure/db/: database.py  setting.py
backend/infrastructure/db/orm/: factory_data.py  predict_data.py
backend/infrastructure/messaging/: definitions.json  enum.py  message.py  settings.py
backend/infrastructure/messaging/consumer/: async_consumer.py  interface.py  sync_consumer.py
backend/infrastructure/messaging/publisher/: async_publisher.py  interface.py  sync_publisher.py
backend/worker/ai_inference/: Dockerfile  main.py  predict.py
backend/worker/cache_setter/: Dockerfile  main.py
backend/worker/db_saver/: Dockerfile  main.py
backend/worker/sample_data_generator/: Dockerfile  main.py
