[project]
name = "cement-boilerplate"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aio-pika>=9.5.5",
    "apscheduler>=3.11.0",
    "asyncpg>=0.30.0",
    "fastapi>=0.116.1",
    "greenlet>=3.2.3",
    "pandas>=2.3.1",
    "pika>=1.3.2",
    "pydantic-settings>=2.10.1",
    "redis>=6.2.0",
    "scikit-learn>=1.7.1",
    "sqlalchemy>=2.0.42",
    "uvicorn>=0.35.0",
]
